# PRAXIS-MOCK-INTERVIEWER

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  docker-compose.yml
.claude/: settings.local.json
apps/api/: .env.example  CLAUDE.md  Dockerfile  alembic.ini  pyproject.toml
apps/api/praxis/: config.py  main.py
apps/api/praxis/auth/: __init__.py  cookies.py  deps.py  jwt.py  providers.py  router.py
apps/api/praxis/db/: models.py  session.py
apps/api/praxis/db/alembic/: env.py
apps/api/praxis/ingestion/: __init__.py  competency.py  extract.py  parse.py
apps/api/praxis/orchestrator/: graph.py  llm.py
apps/api/praxis/retrieval/: chroma_store.py  embeddings.py  hybrid.py  rerank.py
apps/api/praxis/rounds/: coding.py  hr.py  system_design.py
apps/api/praxis/routes/: screening.py  sessions.py  uploads.py
apps/api/praxis/schemas/: parsing.py  screening.py  state.py
apps/api/praxis/scoring/: lora_client.py  rubrics.py
apps/api/praxis/screening/: __init__.py  company.py  fit.py
apps/api/praxis/storage/: __init__.py  base.py  local.py  s3.py
apps/api/praxis/voice/: stt.py  tts.py  vad.py
apps/api/praxis/ws/: handlers.py
apps/api/tests/: _fixtures.py  conftest.py  test_embeddings.py  test_health.py  test_llm.py
apps/api/tests/auth/: test_jwt.py  test_oauth_flow.py
apps/api/tests/db/: test_company_seed.py  test_ingestion_repos.py  test_users_repo.py
apps/api/tests/ingestion/: test_competency.py  test_extract.py  test_parse.py
apps/api/tests/routes/: test_screening.py  test_sessions.py  test_uploads.py
apps/api/tests/screening/: test_company.py  test_fit.py
(+32 files in other folders)
